@startuml attempts-er

!include ../_styles.iuml

title <size:16><b>Attempts Domain</b></size>\n<size:11><color:#60727F>Attempt · AttemptAnswer · AttemptPack · AttemptQuestionPlan</color></size>

entity "attempts" as Attempt <<attempts>> {
    PK(id)                  : TEXT
    ==
    userId                  : TEXT  NOT NULL
    mode                    : TEXT  NOT NULL
    ..AttemptMode: STUDY|GAME..
    status                  : TEXT  NOT NULL
    ..AttemptStatus: IN_PROGRESS|COMPLETED|ABANDONED..
    startedAt               : INTEGER NOT NULL
    completedAt             : INTEGER NULL
    durationMs              : INTEGER NULL
    score                   : INTEGER NOT NULL  DEFAULT 0
    FK(primaryPackId)       : TEXT  NULL
    totalQuestions          : INTEGER NOT NULL  DEFAULT 0
    correctAnswers          : INTEGER NOT NULL  DEFAULT 0
    currentQuestionIndex    : INTEGER NOT NULL  DEFAULT 0
    createdAt               : INTEGER NOT NULL
    updatedAt               : INTEGER NOT NULL
}

entity "attempt_answers" as AttemptAnswer <<attempts>> {
    PK(id)              : TEXT
    ==
    FK(attemptId)       : TEXT  NOT NULL
    FK(questionId)      : TEXT  NOT NULL
    FK(pickedOptionId)  : TEXT  NULL
    isCorrect           : INTEGER NOT NULL
    timeMs              : INTEGER NOT NULL
    timeLimitMs         : INTEGER NULL
    createdAt           : INTEGER NOT NULL
    updatedAt           : INTEGER NOT NULL
}

entity "attempt_packs" as AttemptPack <<join-attempts>> {
    PK(attemptId)       : TEXT
    PK(packId)          : TEXT
}

entity "questions" as Question <<content>> {
    PK(id)              : TEXT
}

entity "attempt_question_plan" as AttemptPlan <<attempts>> {
    PK(attemptId)       : TEXT
    PK(questionId)      : TEXT
    ==
    orderIndex          : INTEGER NOT NULL
    timeLimitMs         : INTEGER NOT NULL
}

Attempt     ||--|{  AttemptAnswer   : "attemptId / CASCADE"
Attempt     ||--o{  AttemptPack    : "attemptId / CASCADE"
AttemptPlan ..>     Attempt        : "attemptId (sin FK)"
AttemptPlan ..>     Question       : "questionId (sin FK)"

note right of Attempt
  userId sin FK —
  gestionado por CurrentUserRepository.
  primaryPackId = pack principal
  de la sesion.
end note

note right of AttemptAnswer
  pickedOptionId = SET_NULL
  si la Option se elimina.
  NULL = timeout sin respuesta.
end note

note right of AttemptPlan
  Congela el orden de preguntas
  y el limite temporal de cada slot
  en modo game.
  La tabla existe en Room, pero
  no declara FKs SQL.
end note

@enduml
